force-app/main/default/objects/Error_Log__c/fields/Anomali__c.field-meta.xml
<CustomField>
    <fullName>Anomali__c</fullName>
    <label>Anomali</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Datahub Not Create Case</fullName>
            </value>
            <value>
                <fullName>Access Outside Business Hours</fullName>
            </value>
            <value>
                <fullName>Extremely Frequency Access Datahub</fullName>
            </value>
            <value>
                <fullName>Access Data Outside BRI IP</fullName>
                <isActive>false</isActive>
                <label>Access Data Outside BRI IP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>