force-app/main/default/objects/Error_Log__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Cams</fullName>
            </value>
            <value>
                <fullName>BRI Notif</fullName>
            </value>
            <value>
                <fullName>CHM</fullName>
            </value>
            <value>
                <fullName>CHM Support</fullName>
            </value>
            <value>
                <fullName>Data Hub</fullName>
            </value>
            <value>
                <fullName>Drone</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>EJOL</fullName>
            </value>
            <value>
                <fullName>ITSM</fullName>
            </value>
            <value>
                <fullName>Rekon</fullName>
            </value>
            <value>
                <fullName>Wise</fullName>
            </value>
            <value>
                <fullName>BRIMO</fullName>
            </value>
            <value>
                <fullName>BRISTARS</fullName>
            </value>
            <value>
                <fullName>BRIVA</fullName>
            </value>
            <value>
                <fullName>BRIZZI</fullName>
            </value>
            <value>
                <fullName>CASA</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MPN</fullName>
            </value>
            <value>
                <fullName>AVAYA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>