force-app/main/default/objects/Error_Log__c/fields/Error_Cause__c.field-meta.xml
<CustomField>
    <fullName>Error_Cause__c</fullName>
    <label>Error Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>