force-app/main/default/objects/Error_Log__c/fields/Error_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Error_Datetime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>