force-app/main/default/objects/Error_Log__c/fields/Is_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Is_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Schedule</label>
    <type>Checkbox</type>
</CustomField>