force-app/main/default/objects/Error_Log__c/fields/Monitoring_Summary__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monitoring Summary</label>
    <referenceTo>Monitoring_Summary__c</referenceTo>
    <relationshipLabel>Request and Error Logs</relationshipLabel>
    <relationshipName>Request_and_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>