force-app/main/default/objects/Error_Log__c/fields/Relation_Record__c.field-meta.xml
<CustomField>
    <fullName>Relation_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  RelatedId__c ,  Object_Name__c , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation Record</label>
    <type>Text</type>
</CustomField>