force-app/main/default/objects/Error_Log__c/fields/Request_Header__c.field-meta.xml
<CustomField>
    <fullName>Request_Header__c</fullName>
    <label>Request Header</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>