force-app/main/default/objects/Error_Log__c/fields/Request_IP__c.field-meta.xml
<CustomField>
    <fullName>Request_IP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>