force-app/main/default/objects/Error_Log__c/fields/Response_Header__c.field-meta.xml
<CustomField>
    <fullName>Response_Header__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>