force-app/main/default/objects/Error_Log__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>