force-app/main/default/objects/Error_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHM</fullName>
            </value>
            <value>
                <fullName>BRImo</fullName>
            </value>
            <value>
                <fullName>BRILink</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>Ceria</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>ITSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>