force-app/main/default/objects/Error_Log__c/fields/String_To_Sign__c.field-meta.xml
<CustomField>
    <fullName>String_To_Sign__c</fullName>
    <label>String To Sign</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>