force-app/main/default/objects/Error_Log__c/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>