force-app/main/default/objects/Error_Log__c/fields/User_Run__c.field-meta.xml
<CustomField>
    <fullName>User_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Run</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>