force-app/main/default/objects/Error_Log__c/listViews/AVAYA.listView-meta.xml
<ListView>
    <fullName>AVAYA</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Destination__c</columns>
    <columns>Response_Status__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>SCC_AVAYA</value>
    </filters>
    <label>AVAYA</label>
</ListView>