force-app/main/default/objects/Error_Log__c/listViews/EJ.listView-meta.xml
<ListView>
    <fullName>EJ</fullName>
    <columns>NAME</columns>
    <columns>Error_Messages__c</columns>
    <columns>User_Run__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Datetime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>SCC_CaseResolution_EJOL</value>
    </filters>
    <label>EJ</label>
</ListView>