force-app/main/default/objects/Error_Log__c/listViews/Extremely_Frequency_Access_Datahub.listView-meta.xml
<ListView>
    <fullName>Extremely_Frequency_Access_Datahub</fullName>
    <columns>NAME</columns>
    <columns>Error_Messages__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type_Name__c</columns>
    <columns>User_Run__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Menu__c</columns>
    <columns>Anomali__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Response_Status_Code__c</field>
        <operation>equals</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>Anomali__c</field>
        <operation>equals</operation>
        <value>Extremely Frequency Access Datahub</value>
    </filters>
    <filters>
        <field>Menu__c</field>
        <operation>notEqual</operation>
        <value>Home</value>
    </filters>
    <label>Extremely Frequency Access Datahub</label>
</ListView>