force-app/main/default/objects/Error_Log__c/listViews/MMS.listView-meta.xml
<ListView>
    <fullName>MMS</fullName>
    <columns>NAME</columns>
    <columns>Error_Messages__c</columns>
    <columns>Error_Datetime__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>User_Run__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>contains</operation>
        <value>mms</value>
    </filters>
    <label>MMS</label>
</ListView>