force-app/main/default/objects/Error_Log__c/listViews/Notif_Push_CIA.listView-meta.xml
<ListView>
    <fullName>Notif_Push_CIA</fullName>
    <columns>NAME</columns>
    <columns>User_Run__c</columns>
    <columns>Class_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_Body__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Error_Messages__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>SCC_PushNotif_CIA</value>
    </filters>
    <label>Notif Push CIA</label>
</ListView>