force-app/main/default/objects/Error_Log__c/listViews/Notification.listView-meta.xml
<ListView>
    <fullName>Notification</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>contains</operation>
        <value>SCC_HttpReq_Notification</value>
    </filters>
    <label>Notification BRIStar</label>
</ListView>