force-app/main/default/objects/Error_Log__c/listViews/Outbound.listView-meta.xml
<ListView>
    <fullName>Outbound</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Error_Messages__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Response_Body__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>User_Run__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </filters>
    <label>Outbound</label>
</ListView>