force-app/main/default/objects/Error_Log__c/listViews/Pembukuan.listView-meta.xml
<ListView>
    <fullName>Pembukuan</fullName>
    <columns>NAME</columns>
    <columns>Endpoint__c</columns>
    <columns>Error_Messages__c</columns>
    <columns>User_Run__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Response_Status__c</columns>
    <columns>Request_Body__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Endpoint__c</field>
        <operation>equals</operation>
        <value>callout:ClosedDevBRI/gateway/apiCHM/1.0/payment/settlement/book</value>
    </filters>
    <label>Pembukuan</label>
</ListView>