force-app/main/default/objects/Error_Log__c/listViews/Pembukuan2.listView-meta.xml
<ListView>
    <fullName>Pembukuan2</fullName>
    <columns>NAME</columns>
    <columns>Error_Messages__c</columns>
    <columns>User_Run__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>Pembukuan</label>
</ListView>