force-app/main/default/objects/Error_Log__c/listViews/RPA.listView-meta.xml
<ListView>
    <fullName>RPA</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Error_Messages__c</columns>
    <columns>User_Run__c</columns>
    <columns>Request_Body__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>SCC_RPACreateTicket</value>
    </filters>
    <label>RPA</label>
</ListView>